--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -7,9 +7,15 @@
    "source": [
     "# Geospatial Data Processing in Python: A Comprehensive Tutorial\n",
     "\n",
-    "https://github.com/martinchristen/EP2023Tutorial\n",
-    "\n",
     "https://ep2023.europython.eu/session/geospatial-data-processing-in-python-a-comprehensive-tutorial\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\"> <b>GitHub:</b> <a href=\"https://github.com/martinchristen/EP2023Tutorial\">github.com/martinchristen/EP2023Tutorial</a> </div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "Schedule:\n",
     "\n",
@@ -21,9 +27,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3281ffd6-9984-4a43-8a09-38858458f4ed",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\"> <b>NOTE</b> Use blue boxes for Tips and notes. </div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\"> Use green boxes sparingly, and only for some specific purpose that the other boxes can't cover. For example, if you have a lot of related content to link to, maybe you decide to use green boxes for related links from each section of a notebook. </div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\"> Use yellow boxes for examples that are not inside code cells, or use for mathematical formulas if needed. </div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-danger\"> In general, just avoid the red boxes. </div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1139e0-0172-4ba4-98fa-8ed89e7a5c12",
+   "id": "fb98ec02-18c7-4a36-b9ae-a33f9ca151cd",
    "metadata": {},
    "outputs": [],
    "source": []
