--- a/EP01_Installation_Windows.ipynb
+++ b/EP01_Installation_Windows.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "<hr/>\n",
     "\n",
-    "#### Variant 1: Install using Anaconda\n",
+    "<div class=\"alert alert-block alert-info\"> <b>Variant 1: Install using Anaconda</b> <br/><br/>\n",
     "\n",
     "Get the latest Version for Windows here:\n",
     "\n",
@@ -38,11 +38,19 @@
     "\n",
     "Install the latest Version for your operating system. This will take a while.\n",
     "\n",
+    "</div>\n",
+    "\n",
     "<hr/>\n",
     "\n",
-    "#### Variant 2: Install using Miniconda (recommended)\n",
+    "<div class=\"alert alert-block alert-info\"> <b>Variant 2: Install using Miniconda (recommended)</b> <br/><br/>\n",
     "\n",
-    "Download the Windows installer here: https://docs.conda.io/en/latest/miniconda.html \n",
+    "Download the installer here: https://docs.conda.io/en/latest/miniconda.html\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
     "\n",
     "<hr/>"
    ]
@@ -53,6 +61,7 @@
    "source": [
     "#### Install Mamba\n",
     "\n",
+    "https://github.com/mamba-org/mamba\n",
     "\n",
     "Follow instructions here:\n",
     "\n",
@@ -61,7 +70,7 @@
     "You can also install mamba in an existing Anaconda/Miniconda installation: \n",
     "\n",
     "    conda install mamba -n base -c conda-forge\n",
-    "    \n",
+    "        \n",
     "After installation use the \"mamba\" instead of \"conda\" command."
    ]
   },
