--- a/EP04_IntroGDAL.ipynb
+++ b/EP04_IntroGDAL.ipynb
@@ -21,14 +21,7 @@
     "\n",
     "Tons of utility programs\n",
     "\n",
-    "https://gdal.org/programs/index.html\n",
-    "\n",
-    "### Rasterio\n",
-    "\n",
-    "Uses GDAL and has a Pythonic interface\n",
-    "\n",
-    "https://github.com/mapbox/rasterio  <br/>\n",
-    "https://rasterio.readthedocs.io/en/stable/\n"
+    "https://gdal.org/programs/index.html"
    ]
   },
   {
@@ -54,7 +47,7 @@
    "source": [
     "### Utility Functions\n",
     "\n",
-    "In the file download.py I created two simple functions:\n",
+    "In ``download.py`` I created two simple functions:\n",
     "\n",
     "`download(...)`: To download data from an url and display a progress bar (as geodata can be large). Skip already downladed files.\n",
     "\n",
@@ -66,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +70,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download\n",
+    "### Data Directory \"geodata\"\n",
     "\n",
     "First we create a new directory \"geodata\" if it doesn't exist yet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "if not os.path.exists(\"geodata\"):\n",
     "    os.mkdir(\"geodata\")"
    ]
@@ -113,21 +108,36 @@
     "\n",
     "More info: https://www.naturalearthdata.com/\n",
     "\n",
-    "We are downloading a raster dataset: more info/overview here: https://www.naturalearthdata.com/downloads/10m-raster-data/\n"
+    "We are downloading a raster dataset: more info/overview here: https://www.naturalearthdata.com/downloads/10m-raster-data/\n",
+    "\n",
+    "(342 MB)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading geodata/ne_raster.zip from https://naciscdn.org/naturalearth/10m/raster/NE2_HR_LC_SR_W.zip\n",
+      "File already exists, not overwriting.\n",
+      "unzipping...\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's download the data:\n",
     "url =\"https://naciscdn.org/naturalearth/10m/raster/NE2_HR_LC_SR_W.zip\"\n",
     "#backup_url = \"https://www.geopython.xyz/geodata/naturalearth/NE2_HR_LC_SR_W.zip\"  # use this if url above doesn't work anymore\n",
     "\n",
-    "download(url, \"geodata/ne_raster.zip\", False)\n",
-    "unzip(\"geodata/ne_raster.zip\", \"geodata\")"
+    "download(url, \"geodata/ne_raster.zip\")\n",
+    "print(\"unzipping...\")\n",
+    "unzip(\"geodata/ne_raster.zip\", \"geodata\")\n",
+    "print(\"done\")"
    ]
   },
   {
@@ -190,7 +200,7 @@
     "For this we need additional information!\n",
     "\n",
     "\n",
-    "### Using Worldfiles\n",
+    "### Variant 1: Using Worldfiles\n",
     "\n",
     "Georeferencing Raster Data using \"World files\".<br/>\n",
     "The specification was introduced by Esri.\n",
@@ -214,7 +224,7 @@
     "\n",
     "\n",
     "\n",
-    "### Image Header\n",
+    "### Variant 2: Georeferenciation in the Image Header\n",
     "\n",
     "Many raster formats have headers for custom data. TIFF Files can have a \"Geo\" Header containing additiona information such as georeferenciation. Those files are also called GeoTiff.\n",
     "\n",
@@ -228,7 +238,7 @@
     "However this is not necessary as the file is already a GeoTiff. The \".tfw\" is not really necessary in this case, but still provided by Natural Earth.\n",
     "\n",
     "\n",
-    "### aux.xml Files\n",
+    "### Variant 3: Georeferenciation in aux.xml Files\n",
     "\n",
     "For formats that don't have a header GDAL creates aux.xml files containing georeferencing info (CRS and affine transformation)\n",
     "\n",
@@ -646,13 +656,6 @@
     "# Download and unzip url:\n",
     "download(url, \"geodata/\" + os.path.basename(url), False)\n",
     "unzip(f\"geodata/{os.path.basename(url)}\", \"geodata\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(all SRTM data, including vrt and ovr is available here: https://www.geopython.xyz/geodata/processed/srtm.zip )"
    ]
   },
   {
