--- a/EP05_ReadRaster.ipynb
+++ b/EP05_ReadRaster.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading Raster Files\n",
+    "## Reading Raster Files with Python\n",
     "\n",
     "\n",
     "### GDAL\n",
