--- a/EP11_OSMnx.ipynb
+++ b/EP11_OSMnx.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place = \"Basel, Switzerland\"\n",
+    "place = \"Prague, Czech Republic\"\n",
     "graph = ox.graph.graph_from_place(place, network_type='drive')"
    ]
   },
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map([47.561086, 7.588686],\n",
+    "m = folium.Map([50.06233320433081, 14.428682853905626],\n",
     "zoom_start=13,tiles=\"CartoDB dark_matter\")\n",
     "\n",
     "jsondata = streets.to_json()\n",
@@ -197,8 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_station_1 = ox.geocode('Badischer Bahnhof, Basel Switzerland')\n",
-    "train_station_1"
+    "start_location = ox.geocode('New Town, 110 00 Prague 1, Czechia')\n",
+    "start_location"
    ]
   },
   {
@@ -207,8 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_station_2 = ox.geocode('Bahnhof SBB, Basel, Switzerland')\n",
-    "train_station_2"
+    "end_location = ox.geocode('Nusle, 140 00 Prague 4, Czechia')\n",
+    "end_location"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map([47.561086, 7.588686], zoom_start=13,tiles=\"CartoDB dark_matter\")\n",
+    "m = folium.Map([50.06233320433081, 14.428682853905626], zoom_start=13,tiles=\"CartoDB dark_matter\")\n",
     "\n",
     "#jsondata = streets.to_json()\n",
     "\n",
@@ -232,13 +232,13 @@
     "         'weight':'1'}\n",
     "folium.GeoJson(jsondata, style_function=lambda x: style).add_to(m)\n",
     "\n",
-    "folium.Marker(train_station_1, \n",
-    "              popup=\"Badischer Bahnhof\",\n",
-    "              icon=folium.Icon(color=\"green\", prefix=\"fa\", icon=\"train\")).add_to(m)\n",
+    "folium.Marker(start_location, \n",
+    "              popup=\"Start\",\n",
+    "              icon=folium.Icon(color=\"green\", prefix=\"fa\", icon=\"star\")).add_to(m)\n",
     "\n",
-    "folium.Marker(train_station_2, \n",
-    "              popup=\"Bahnhof SBB\",\n",
-    "              icon=folium.Icon(color=\"red\", prefix=\"fa\", icon=\"train\")).add_to(m)\n",
+    "folium.Marker(end_location, \n",
+    "              popup=\"End\",\n",
+    "              icon=folium.Icon(color=\"red\", prefix=\"fa\", icon=\"star\")).add_to(m)\n",
     "m"
    ]
   },
@@ -248,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin_node = ox.distance.nearest_nodes(graph, train_station_1[1], train_station_1[0])  # G, X, Y    Longitude first!\n",
-    "destination_node = ox.distance.nearest_nodes(graph, train_station_2[1], train_station_2[0])"
+    "origin_node = ox.distance.nearest_nodes(graph, start_location[1], start_location[0])  # G, X, Y    Longitude first!\n",
+    "destination_node = ox.distance.nearest_nodes(graph, end_location[1], end_location[0])"
    ]
   },
   {
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map([47.561086, 7.588686], zoom_start=13,tiles=\"CartoDB dark_matter\")\n",
+    "m = folium.Map([50.06233320433081, 14.428682853905626], zoom_start=13,tiles=\"CartoDB dark_matter\")\n",
     "\n",
     "#jsondata = streets.to_json()\n",
     "\n",
@@ -367,284 +367,15 @@
     "folium.GeoJson(jsondata, style_function=lambda x: style).add_to(m)\n",
     "folium.GeoJson(jsonroute, style_function=lambda x: route_style).add_to(m)\n",
     "\n",
-    "folium.Marker(train_station_1, \n",
-    "              popup=\"Badischer Bahnhof\",\n",
-    "              icon=folium.Icon(color=\"green\", prefix=\"fa\", icon=\"train\")).add_to(m)\n",
+    "folium.Marker(start_location, \n",
+    "              popup=\"Start\",\n",
+    "              icon=folium.Icon(color=\"green\", prefix=\"fa\", icon=\"star\")).add_to(m)\n",
     "\n",
-    "folium.Marker(train_station_2, \n",
-    "              popup=\"Bahnhof SBB\",\n",
-    "              icon=folium.Icon(color=\"red\", prefix=\"fa\", icon=\"train\")).add_to(m)\n",
+    "folium.Marker(end_location, \n",
+    "              popup=\"End\",\n",
+    "              icon=folium.Icon(color=\"red\", prefix=\"fa\", icon=\"star\")).add_to(m)\n",
     "m"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Building Footprints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buildings = ox.geometries_from_place(\"Basel, Switzerland\", tags={'building':True})\n",
-    "\n",
-    "buildings.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buildings.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ox.plot_footprints(buildings, figsize=(16,15));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Retrieving Buildings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "museum = buildings.query(\"tourism == 'museum'\")\n",
-    "museum = museum[['name', 'geometry']]\n",
-    "museum.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ox.plot_footprints(museum, figsize=(16,15));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Putting those Buildings on a Folium Map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import html\n",
-    "\n",
-    "m = folium.Map([47.561086, 7.588686],zoom_start=15)\n",
-    "\n",
-    "\n",
-    "style = {'color': '#FF0000',\n",
-    "         'fillColor': '#FFFF00',\n",
-    "         'weight':'2'\n",
-    "        }\n",
-    "\n",
-    "def building(building):\n",
-    "    jsondata = gpd.GeoSeries([building[\"geometry\"]]).to_json()\n",
-    "    name = html.escape(building[\"name\"]) \n",
-    "    folium.GeoJson(jsondata, style_function=lambda x: style).add_child(folium.Popup(name)).add_to(m)\n",
-    "\n",
-    "museum.apply(building, axis=1)\n",
-    "\n",
-    "m.save(\"museums.html\")\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creating POI out of buildings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_geometry(x):\n",
-    "    g = x[\"geometry\"]\n",
-    "    c = g.centroid\n",
-    "    return c\n",
-    "   \n",
-    "centroid = museum.apply(get_geometry, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "museum[\"centroid\"] = centroid "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "museum.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import html\n",
-    "\n",
-    "m = folium.Map([47.561086, 7.588686],zoom_start=15)\n",
-    "\n",
-    "\n",
-    "def building(building):\n",
-    "    lng = building[\"centroid\"].x\n",
-    "    lat = building[\"centroid\"].y\n",
-    "\n",
-    "    name = html.escape(building[\"name\"])\n",
-    "   \n",
-    "    folium.Marker([lat,lng], \n",
-    "              popup=name,\n",
-    "              icon=folium.Icon(color=\"red\", prefix=\"fa\", icon=\"university\")).add_to(m)\n",
-    "\n",
-    "\n",
-    "museum.apply(building, axis=1)\n",
-    "\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Retrieve POI from OSM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atm = ox.geometries.geometries_from_place(\"Basel, Switzerland\", tags={'amenity': 'atm'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(atm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atm.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import html\n",
-    "\n",
-    "m = folium.Map([47.561086, 7.588686],zoom_start=15)\n",
-    "\n",
-    "\n",
-    "def atm2poi(x):\n",
-    "    lng = x[\"geometry\"].x\n",
-    "    lat = x[\"geometry\"].y\n",
-    "    operator = x[\"operator\"]\n",
-    "\n",
-    "    if type(operator) == str:\n",
-    "        name = html.escape(operator)\n",
-    "    else:\n",
-    "        name = \"unkown bank\"\n",
-    "   \n",
-    "    folium.Marker([lat,lng], \n",
-    "              popup=name,\n",
-    "              icon=folium.Icon(color=\"green\", prefix=\"fa\", icon=\"credit-card\")).add_to(m)\n",
-    "\n",
-    "\n",
-    "atm.apply(atm2poi, axis=1)\n",
-    "\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Multiple Tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fuel_restaurant = ox.geometries.geometries_from_place(\"Basel, Switzerland\", tags={'amenity': ['fuel','restaurant'] })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fuel_restaurant.query(\"amenity == 'fuel'\").head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fuel_restaurant.query(\"amenity == 'restaurant'\").head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
