--- a/EP12_GetWikipedia_Data.ipynb
+++ b/EP12_GetWikipedia_Data.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c55cfa1c-d316-4d75-9408-dc24c7be0daf",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "8  23°49′45″N 117°29′30″E﻿ / ﻿23.82917°N 117.49167°E  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b4064ce2-3816-446c-bb30-8ab6001ee462",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[1].to_csv(\"powerplants.csv\")"
+    "df[1].to_csv(\"geodata/powerplants.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "eac0f62f-1c18-49e4-9986-7a61f0777f4b",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cfa8bd54-5b22-4d81-a580-6058b45746b7",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "69cb8a75-af58-439e-a13f-68c1fe38dbfb",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
     "import string\n",
     "import csv\n",
     "\n",
-    "file = open(\"powerplants.csv\", encoding=\"utf-8\")\n",
+    "file = open(\"geodata/powerplants.csv\", encoding=\"utf-8\")\n",
     "outfile = open(\"geodata/powerplants2023.csv\", \"w\", encoding=\"utf-8\")\n",
     "\n",
     "outfile.write(\"id,name,units,capacity,country,geometry\\n\")\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "c4661e2a-97e0-40a5-ac94-ea3f1f6d9902",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "83275f26-8c56-45a6-b811-13ddf74583b4",
    "metadata": {},
    "outputs": [
@@ -348,40 +348,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>59</td>\n",
-       "      <td>Gösgen</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1010.0</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>POINT (7.96667 47.36583)</td>\n",
+       "      <th>48</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Dukovany</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1878.0</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>POINT (16.14889 49.08500)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>91</td>\n",
-       "      <td>Leibstadt</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1190.0</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>POINT (8.18472 47.60306)</td>\n",
+       "      <th>155</th>\n",
+       "      <td>155</td>\n",
+       "      <td>Temelín</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2056.0</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>POINT (14.37611 49.18000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id       name  units  capacity      country                  geometry\n",
-       "59  59     Gösgen      1    1010.0  Switzerland  POINT (7.96667 47.36583)\n",
-       "91  91  Leibstadt      1    1190.0  Switzerland  POINT (8.18472 47.60306)"
+       "      id      name  units  capacity         country                   geometry\n",
+       "48    48  Dukovany      4    1878.0  Czech Republic  POINT (16.14889 49.08500)\n",
+       "155  155   Temelín      2    2056.0  Czech Republic  POINT (14.37611 49.18000)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf.query('country == \"Switzerland\"')"
+    "gdf.query('country == \"Czech Republic\"')"
    ]
   },
   {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "d504e373-b1ce-460b-9692-88c9e100226f",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "027d3f7a-b3f7-4c8e-9d38-45dfd1e18276",
    "metadata": {},
    "outputs": [
@@ -434,17 +434,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "3239a94b-01c3-43dd-abd4-9bb660cf23b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[2].to_csv(\"mountainpeaks.csv\")  # index may change..."
+    "df[2].to_csv(\"geodata/mountainpeaks.csv\")  # index may change..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "7452a6c1-fdb2-46d7-9623-292ca130b613",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
     "import string\n",
     "import csv\n",
     "\n",
-    "file = open(\"mountainpeaks.csv\", encoding=\"utf-8\")\n",
+    "file = open(\"geodata/mountainpeaks.csv\", encoding=\"utf-8\")\n",
     "outfile = open(\"geodata/mountainpeaks2023.csv\", \"w\", encoding=\"utf-8\")\n",
     "\n",
     "outfile.write(\"id,name,height,country,geometry\\n\")\n",
