--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -7,14 +7,11 @@
    "source": [
     "# Geospatial Data Processing in Python: A Comprehensive Tutorial\n",
     "\n",
-    "https://ep2023.europython.eu/session/geospatial-data-processing-in-python-a-comprehensive-tutorial\n",
+    "Prof. Martin Christen<br/>\n",
+    "University of Applied Sciences and Arts Northwestern Switzerland<br/>\n",
+    "martin.christen@fhnw.ch<br/>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\"> <b>GitHub:</b> <a href=\"https://github.com/martinchristen/EP2023Tutorial\">github.com/martinchristen/EP2023Tutorial</a> </div>\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "Schedule:\n",
@@ -23,7 +20,9 @@
     "\n",
     "* Part I (90 min) 13:45 - 15:15 Club A\n",
     "* Coffee Break: 15:15 - 15:30\n",
-    "* Part II (90 min) 15:30 - 17:00 Club A\n"
+    "* Part II (90 min) 15:30 - 17:00 Club A\n",
+    "\n",
+    "https://ep2023.europython.eu/session/geospatial-data-processing-in-python-a-comprehensive-tutorial\n"
    ]
   },
   {
