--- a/EP08_CRS_Maps.ipynb
+++ b/EP08_CRS_Maps.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drawing our gedetic line\n",
+    "### Drawing our geodetic line\n",
     "\n",
     "First let's create separate variables for longitude and latitude"
    ]
