--- a/EP04_IntroGDAL.ipynb
+++ b/EP04_IntroGDAL.ipynb
@@ -30,15 +30,9 @@
    "source": [
     "## Get data!\n",
     "\n",
-    "Let's get a **global** raster dataset, this means a dataset covering our whole planet, more about that later.\n",
+    "Let's get a **global** raster dataset, this means a dataset covering our whole planet.\n",
     "\n",
-    "We're downloading the natural earth raster dataset.\n",
-    "\n",
-    "The license of the dataset is public domain, this means you can do whatever you want to do with the data.\n",
-    "\n",
-    "We are downloading the \"large size\" dataset (309.77 MB).\n",
-    "\n",
-    "To do that we need two utiliy functions:"
+    "So let's download it. Let's create two functions:"
    ]
   },
   {
@@ -49,17 +43,21 @@
     "\n",
     "In ``download.py`` I created two simple functions:\n",
     "\n",
-    "`download(...)`: To download data from an url and display a progress bar (as geodata can be large). Skip already downladed files.\n",
+    "<div class=\"alert alert-block alert-info\"> \n",
+    "<b>download(...)</b>:<br/>To download data from an url and display a <b>progress bar</b> (as geodata can be large). Skip already downladed files.\n",
+    "</div>\n",
     "\n",
-    "`unzip(...)`: To unzip a file. Skip already unzipped files.\n",
+    "<div class=\"alert alert-block alert-info\"> \n",
+    "<b>unzip(...)</b>:<br/> To unzip a file. It skips already unzipped files. If we execute the notebooks again, it will not unzip again.\n",
+    "</div>\n",
     "\n",
-    "\n",
-    "I'm not going into implementation details here, if you are interested in the functions, check them out in download.py\n"
+    "I'm not going into implementation details here, if you are interested in the functions, check them out in download.py\n",
+    "It uses the base Python modules urllib.request and zipfile.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading geodata/ne_raster.zip from https://naciscdn.org/naturalearth/10m/raster/NE2_HR_LC_SR_W.zip\n",
-      "File already exists, not overwriting.\n",
-      "unzipping...\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let's download the data:\n",
     "url =\"https://naciscdn.org/naturalearth/10m/raster/NE2_HR_LC_SR_W.zip\"\n",
@@ -198,7 +185,6 @@
     "* Converting Geo-coordinates to pixel coordinates\n",
     "\n",
     "For this we need additional information!\n",
-    "\n",
     "\n",
     "### Variant 1: Using Worldfiles\n",
     "\n",
