--- a/EP04_IntroGDAL.ipynb
+++ b/EP04_IntroGDAL.ipynb
@@ -104,7 +104,9 @@
     "The Natural Earth dataset is widely used in cartography, geography, and other fields that require accurate and up-to-date geographic information. It is also used as a base layer for a range of mapping applications, including web mapping, data visualization, and geographic analysis.\n",
     "\n",
     "\n",
-    "More info: https://www.naturalearthdata.com/\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    More info: <a href=\"https://www.naturalearthdata.com/\">https://www.naturalearthdata.com</a>\n",
+    "</div>\n",
     "\n",
     "We are downloading a raster dataset: more info/overview here: https://www.naturalearthdata.com/downloads/10m-raster-data/\n",
     "\n",
