--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -66,7 +66,10 @@
     "    conda install mamba -n base -c conda-forge\n",
     "    mamba init\n",
     "    \n",
-    "Restart your Terminal"
+    "Restart your Terminal\n",
+    "\n",
+    "\n",
+    "if you get errors with mamba, use conda (slower but it works too)"
    ]
   },
   {
