--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -13,7 +13,12 @@
     "\n",
     "<img src=\"artwork/flyer.jpg\" width=\"30%\" />\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\"> <b>GitHub:</b> <a href=\"https://github.com/martinchristen/EP2023Tutorial\">github.com/martinchristen/EP2023Tutorial</a> </div>\n",
+    "<div class=\"alert alert-block alert-info\"> <b>GitHub:</b><br/> <a href=\"https://github.com/martinchristen/EP2023Tutorial\">github.com/martinchristen/EP2023Tutorial</a> \n",
+    "<br/>\n",
+    "<br/>\n",
+    "<a href=\"https://tinyurl.com/geoep2023\">https://tinyurl.com/geoep2023</a>\n",
+    "\n",
+    "</div>\n",
     "\n",
     "\n",
     "Schedule:\n",
