--- a/EP10_Shapely.ipynb
+++ b/EP10_Shapely.ipynb
@@ -34,7 +34,9 @@
     "|MultiLineString      | A collection of one or more LineStrings |\n",
     "|MultiPolygon         | A collection of one or more Polygons |\n",
     "|GeometryCollection   | A collection of one or more geometries that may contain more than one type of geometry |\n",
-    "\n"
+    "\n",
+    "\n",
+    "![Geometry Types](artwork/geomtype.png) \n"
    ]
   },
   {
