--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -69,7 +69,11 @@
     "Restart your Terminal\n",
     "\n",
     "\n",
-    "if you get errors with mamba, use conda (slower but it works too)"
+    "Sometimes on MacOS there are some errors abount libarchive, this may help:\n",
+    "\n",
+    "    conda install libarchive -c conda-forge\n",
+    "\n",
+    "if you get errors with mamba, you can always use conda (slower but it works too)"
    ]
   },
   {
