--- a/EP06_ReadVectorDataFiona.ipynb
+++ b/EP06_ReadVectorDataFiona.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading geodata/ne.gpkg.zip from http://naciscdn.org/naturalearth/packages/natural_earth_vector.gpkg.zip\n",
+      "100% done \t[****************************************************************************************************]\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"http://naciscdn.org/naturalearth/packages/natural_earth_vector.gpkg.zip\"\n",
     "#url = \"https://www.geopython.xyz/geodata/naturalearth/natural_earth_vector.gpkg.zip\" # backup-url\n",
