--- a/EP10_Shapely.ipynb
+++ b/EP10_Shapely.ipynb
@@ -201,172 +201,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading Vector Files using Fiona\n",
-    "\n",
-    "https://github.com/Toblerity/Fiona\n",
-    "\n",
-    "Spatial information is not only geometry. Together with it we always have metadata (properties). Lets look at a first dataset.\n",
-    "\n",
-    "\n",
-    "We're using the GeoPackage file format. To list all available layers:\n",
-    "     \n",
-    "    filename = \"geodata/packages/natural_earth_vector.gpkg\"\n",
-    "    layers = fiona.listlayers(filename)\n",
-    "    print(layers)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fiona\n",
-    "\n",
-    "fiona.supported_drivers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 'GPKG' in fiona.supported_drivers:\n",
-    "    print(\"GeoPackage is supported...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fiona\n",
-    "\n",
-    "c = fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_airports')\n",
-    "\n",
-    "airport = next(iter(c))\n",
-    "airport"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airport['properties']['name']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airport['geometry']['type']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airport['geometry']['coordinates']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets read all data. There are basically two ways:\n",
-    "\n",
-    "a) load everything to memory: (if dataset isn't too large...)\n",
-    "\n",
-    "    alldata = list(c)\n",
-    "    \n",
-    "b) iterate through all data: (one by one):\n",
-    "\n",
-    "    for element in c:\n",
-    "        ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_airports') as c:\n",
-    "    for airport in c:\n",
-    "        if airport['properties']['iata_code'] == \"ZRH\":\n",
-    "            #print(airport['properties']['name'])\n",
-    "            #print(airport['geometry']['coordinates'])\n",
-    "            #print(airport['properties']['wikipedia'])\n",
-    "            print(airport)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_airports') as c:\n",
-    "    print(c.crs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fiona\n",
-    "\n",
-    "c = fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_admin_0_countries')\n",
-    "\n",
-    "country = next(iter(c))\n",
-    "\n",
-    "print(country['properties']['NAME'])\n",
-    "print(country['properties']['NAME_ZH'])\n",
-    "print(country['properties']['CONTINENT'])\n",
-    "print(country['properties']['POP_EST'])\n",
-    "print(country['properties']['POP_YEAR'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_admin_0_countries') as c:\n",
-    "    for country in c:\n",
-    "        if country['properties']['NAME'] == \"Switzerland\":\n",
-    "            print(country['properties']['POP_EST'])\n",
-    "            print(country['properties']['POP_YEAR'])   \n",
-    "            print(country['geometry']['type'])\n",
-    "            # print(country['geometry']['coordinates']) # you don't want to print all coordinates!\n",
-    "            geomtype = country['geometry']['type']\n",
-    "            geometry = country['geometry']\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Draw Shapely Polygon using cartopy"
    ]
   },
@@ -425,209 +259,8 @@
     "gl = ax.gridlines(crs=ccrs.PlateCarree(), draw_labels=True,\n",
     "                  linewidth=2, color='gray', alpha=0.1, linestyle='--')\n",
     "gl.xlabels_top = False\n",
-    "gl.ylabels_left = False\n",
-    "gl.xlabel_style = {'size': 10, 'color': 'black'}\n",
-    "gl.ylabel_style = {'size': 10, 'color': 'black'}\n"
+    "gl.ylabels_left = False\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's plot the Switzerland Polygon using Cartopy:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cartopy.feature import ShapelyFeature\n",
-    "from shapely.geometry import shape\n",
-    "from shapely.geometry import Polygon\n",
-    "\n",
-    "ch = Polygon(shape(geometry))\n",
-    "\n",
-    "######################\n",
-    "proj = ccrs.Mercator()\n",
-    "######################\n",
-    "\n",
-    "ax = plt.axes(projection=proj)\n",
-    "ax.set_extent((ch.bounds[0], ch.bounds[2], ch.bounds[1], ch.bounds[3]), crs=ccrs.PlateCarree())\n",
-    "shape_feature = ShapelyFeature([ch], ccrs.PlateCarree(), facecolor='#AAFFAA', edgecolor='k')\n",
-    "ax.add_feature(shape_feature)\n",
-    "\n",
-    "gl = ax.gridlines(crs=ccrs.PlateCarree(), draw_labels=True,\n",
-    "                  linewidth=1, color='black', alpha=0.5, linestyle='--')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proj = ccrs.PlateCarree()\n",
-    "\n",
-    "ax = plt.axes(projection=proj)\n",
-    "ax.set_extent((ch.bounds[0], ch.bounds[2], ch.bounds[1], ch.bounds[3]), crs=ccrs.PlateCarree())\n",
-    "shape_feature = ShapelyFeature([ch], ccrs.PlateCarree(), facecolor='#AAFFAA', edgecolor='k')\n",
-    "ax.add_feature(shape_feature);\n",
-    "\n",
-    "gl = ax.gridlines(crs=ccrs.PlateCarree(), draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle='--')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [8.539418]\n",
-    "y = [47.378115]  # Zurich, Switzerland\n",
-    "\n",
-    "proj = ccrs.Mercator()\n",
-    "\n",
-    "plt.figure(figsize=(15, 9))\n",
-    "ax = plt.axes(projection=proj)\n",
-    "ax.set_extent((ch.bounds[0], ch.bounds[2], ch.bounds[1], ch.bounds[3]), crs=ccrs.PlateCarree())\n",
-    "shape_feature = ShapelyFeature([ch], ccrs.PlateCarree(), facecolor='#EEFFFF', edgecolor='k')\n",
-    "ax.add_feature(shape_feature);\n",
-    "ax.plot(x,y, color='blue', linewidth=2, marker='o', transform=ccrs.Geodetic())\n",
-    "plt.text(x[0], y[0]*1.0005, \n",
-    "         \"Zürich\", \n",
-    "         horizontalalignment='center', \n",
-    "         weight=\"regular\", \n",
-    "         color=\"blue\", \n",
-    "         fontsize=10, \n",
-    "         transform=ccrs.Geodetic());\n",
-    "gl = ax.gridlines(crs=ccrs.PlateCarree(), draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle='--')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Find Airports inside the polygon\n",
-    "\n",
-    "First we convert it to a shapely Polygon. If you use another country, it may be a Multipolygon, check the output above!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shapely.geometry import shape\n",
-    "from shapely.geometry import Polygon   # oder MultiPolygon für andere Länder\n",
-    "\n",
-    "ch = Polygon(shape(geometry))\n",
-    "ch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shapely.geometry import Point\n",
-    "\n",
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_airports') as c:\n",
-    "    for airport in c:      \n",
-    "        position = Point(airport['geometry']['coordinates'])\n",
-    "        if position.within(ch):\n",
-    "            print(airport['properties']['iata_code'], airport['properties']['name'], airport['geometry']['coordinates'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Find Areas with a population greater than 75'000 inside the Polygon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fiona\n",
-    "\n",
-    "cnt = 0\n",
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_populated_places') as c:\n",
-    "    for place in c:\n",
-    "        geom = place[\"geometry\"]\n",
-    "        position = Point(place['geometry']['coordinates'])\n",
-    "        name = place[\"properties\"][\"NAME\"]\n",
-    "        pop = int(place[\"properties\"][\"POP_MAX\"])\n",
-    "        cnt+=1\n",
-    "        if pop>25000 and position.within(ch):\n",
-    "            print(name, pop, position)\n",
-    "print(cnt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proj = ccrs.Mercator()\n",
-    "\n",
-    "plt.figure(figsize=(15, 9))\n",
-    "ax = plt.axes(projection=proj)\n",
-    "ax.set_extent((ch.bounds[0], ch.bounds[2], ch.bounds[1], ch.bounds[3]), crs=ccrs.PlateCarree())\n",
-    "shape_feature = ShapelyFeature([ch], ccrs.PlateCarree(), facecolor='#EEFFFF', edgecolor='k')\n",
-    "ax.add_feature(shape_feature);\n",
-    "\n",
-    "with fiona.open('geodata/packages/natural_earth_vector.gpkg', 'r', layer='ne_10m_populated_places') as c:\n",
-    "    for place in c:\n",
-    "        geom = place[\"geometry\"]\n",
-    "        position = Point(place['geometry']['coordinates'])\n",
-    "        name = place[\"properties\"][\"NAME\"]\n",
-    "        pop = int(place[\"properties\"][\"POP_MAX\"])\n",
-    "        if pop>25000 and position.within(ch):\n",
-    "            ax.plot(position.x, position.y, color='blue', linewidth=2, marker='o', transform=ccrs.Geodetic())\n",
-    "            plt.text(position.x, position.y*1.0005, \n",
-    "                 name, \n",
-    "                 horizontalalignment='center', \n",
-    "                 weight=\"regular\", \n",
-    "                 color=\"black\", \n",
-    "                 fontsize=10, \n",
-    "                 transform=ccrs.Geodetic());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
