fixed modules to install

--- a/EP01_Installation_Windows.ipynb
+++ b/EP01_Installation_Windows.ipynb
@@ -108,8 +108,7 @@
     "    \n",
     "    mamba activate geopython310          \n",
     "\n",
-    "    mamba install gdal rasterio matplotlib geopandas geoplot folium osmnx pystac-client scikit-image pymongo geojson -c conda-forge -y  \n",
-    "    folium\n",
+    "    mamba install gdal rasterio matplotlib geopandas geoplot folium osmnx -c conda-forge -y  \n",
     "\n",
     "Do this everytime from now on:\n",
     "\n",
