--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -63,17 +63,10 @@
     "\n",
     "You can also install mamba in an existing Anaconda/Miniconda installation: \n",
     "\n",
-    "    conda install mamba -n base -c conda-forge\n",
+    "    conda install -n base --override-channels -c conda-forge mamba 'python_abi=*=*cp*'\n",
     "    mamba init\n",
     "    \n",
-    "Restart your Terminal\n",
-    "\n",
-    "\n",
-    "Sometimes on MacOS there are some errors abount libarchive, this may help:\n",
-    "\n",
-    "    conda install libarchive -c conda-forge\n",
-    "\n",
-    "if you get errors with mamba, you can always use conda (slower but it works too)"
+    "Restart your Terminal"
    ]
   },
   {
@@ -110,8 +103,7 @@
     "    \n",
     "    mamba activate geopython310          \n",
     "\n",
-    "    mamba install gdal rasterio matplotlib geopandas geoplot folium osmnx pystac-client scikit-image pymongo geojson -c conda-forge -y  \n",
-    "    folium\n",
+    "    mamba install gdal rasterio matplotlib geopandas geoplot folium osmnx -c conda-forge -y  \n",
     "\n",
     "Do this everytime from now on:\n",
     "\n",
