--- a/EP03_Installation_Linux.ipynb
+++ b/EP03_Installation_Linux.ipynb
@@ -119,7 +119,7 @@
     "    mamba activate geopython310          \n",
     "\n",
     "    mamba install gdal rasterio matplotlib geopandas geoplot -c conda-forge -y\n",
-    "    mamba install folium osmnx pystac-client scikit-image pymongo geojson -c conda-forge -y  \n",
+    "    mamba install folium osmnx pystac-client scikit-image -c conda-forge -y  \n",
     "    \n",
     "Do this everytime from now on:\n",
     "\n",
@@ -130,6 +130,13 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
