--- a/EP01_Installation_Windows.ipynb
+++ b/EP01_Installation_Windows.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "    conda install mamba -n base -c conda-forge\n",
     "        \n",
-    "After installation use the \"mamba\" instead of \"conda\" command."
+    "After installation you can use \"mamba\" instead of \"conda\" command."
    ]
   },
   {
