added warning notice

--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -33,12 +33,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "025587aa-553a-4a6f-a1fe-70584d4f0b1f",
+   "cell_type": "markdown",
+   "id": "be9d4ddf-0698-4484-9ab9-a754543b9e02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Warnings</b><br/><br/>\n",
+    "To run everything you need about 25 GB on your disk<br/>\n",
+    "We need to download a couple GB during this tutorial<br/>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
