minor updates / fixed typos

--- a/EP01_Installation_Windows.ipynb
+++ b/EP01_Installation_Windows.ipynb
@@ -70,6 +70,8 @@
     "You can also install mamba in an existing Anaconda/Miniconda installation: \n",
     "\n",
     "    conda install mamba -n base -c conda-forge\n",
+    "    \n",
+    "(Installing mamba into any other environment than base is not supported)    \n",
     "        \n",
     "After installation you can use \"mamba\" instead of \"conda\" command."
    ]
