--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -39,10 +39,19 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "<b>Warnings</b><br/><br/>\n",
-    "To run everything you need about 25 GB on your disk<br/>\n",
+    "To run everything you need about 25 GB on your disk (where the notebooks are located)<br/>\n",
     "We need to download a couple GB during this tutorial<br/>\n",
+    "Please <b>don't execute</b> EP13_OSMnx.ipynb during the conference. OpenStreetMap will probably ban/restrict the conference IP.<br/>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e8641b-48c8-4860-8ec9-5d6bc4e8e656",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
