--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -115,11 +115,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Install QGIS (optional)\n",
+    "\n",
+    "https://www.qgis.org/en/site/forusers/download.html"
+   ]
   }
  ],
  "metadata": {
