--- a/EP04_IntroGDAL.ipynb
+++ b/EP04_IntroGDAL.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "# Let's download the data:\n",
     "url =\"https://naciscdn.org/naturalearth/10m/raster/NE2_HR_LC_SR_W.zip\"\n",
-    "#backup_url = \"https://www.geopython.xyz/geodata/naturalearth/NE2_HR_LC_SR_W.zip\"  # use this if url above doesn't work anymore\n",
+    "#url = \"https://www.geopython.xyz/geodata/naturalearth/NE2_HR_LC_SR_W.zip\"  # use this if url above doesn't work anymore\n",
     "\n",
     "download(url, \"geodata/ne_raster.zip\")\n",
     "print(\"unzipping...\")\n",
@@ -647,7 +647,7 @@
     "# download and extract SRTM elevation data over Switzerland:\n",
     "\n",
     "url = \"https://srtm.csi.cgiar.org/wp-content/uploads/files/srtm_5x5/TIFF/srtm_38_03.zip\"\n",
-    "#backup_url = \"https://www.geopython.xyz/geodata/srtm/srtm_38_03.zip\"\n",
+    "#url = \"https://www.geopython.xyz/geodata/srtm/srtm_38_03.zip\"\n",
     "\n",
     "# Download and unzip url:\n",
     "download(url, \"geodata/\" + os.path.basename(url), False)\n",
