--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -18,9 +18,27 @@
     "<br/>\n",
     "<a href=\"https://tinyurl.com/geoep2023\">https://tinyurl.com/geoep2023</a>\n",
     "\n",
-    "</div>\n",
-    "\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be9d4ddf-0698-4484-9ab9-a754543b9e02",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Warnings</b><br/><br/>\n",
+    "To run everything you need about 25 GB on your disk (where the notebooks are located)<br/>\n",
+    "We need to download a couple GB during this tutorial<br/>\n",
+    "Please <b>don't execute</b> EP13_OSMnx.ipynb during the conference. OpenStreetMap will ban/restrict the conference IP if we exec it all at the same time<br/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4e6b261-cf23-436b-806b-e9d237fef4d3",
+   "metadata": {},
+   "source": [
     "Schedule:\n",
     "\n",
     "July 17, 2023\n",
@@ -33,22 +51,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "be9d4ddf-0698-4484-9ab9-a754543b9e02",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Warnings</b><br/><br/>\n",
-    "To run everything you need about 25 GB on your disk (where the notebooks are located)<br/>\n",
-    "We need to download a couple GB during this tutorial<br/>\n",
-    "Please <b>don't execute</b> EP13_OSMnx.ipynb during the conference. OpenStreetMap will probably ban/restrict the conference IP.<br/>\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74e8641b-48c8-4860-8ec9-5d6bc4e8e656",
+   "id": "54613bee-cd49-4577-804e-98c5db934349",
    "metadata": {},
    "outputs": [],
    "source": []
